--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "covid-19-tracker",
   "version": "0.1.0",
+  "homepage": "https://jerryliang613.github.io/covid-19-update",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.2",
@@ -45,8 +46,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^3.1.0"
   }
 }
